# RiuKin-CLI

./: README.md  pyproject.toml
blender_addon/: __init__.py  materials.py  operators.py  panels.py
riukin_cli/: __init__.py  main.py
riukin_cli/skills/: __init__.py  blender_skill.py  file_skill.py  github_skill.py  system_skill.py  web_skill.py
